Preload images to resolve flicker-in effect

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -17,7 +17,7 @@
     height: 125px;
     width: 100px;
     text-align: center;
-    padding:.5rem;
+    padding: .5rem;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     font-family: "Jost", sans-serif;
     will-change: transform;
@@ -29,7 +29,7 @@
 
 .Card.facedown {
     background-color: red;
-    opacity: 1;
+    opacity: 0;
 }
 
 .Card:hover {
@@ -38,10 +38,10 @@
     z-index: 2;
 }
 
-.Card > img {
+.Card>img {
     max-width: 100%;
     max-height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
     margin: 0 auto;
 }
